--- a/scrip-trad/package.json
+++ b/scrip-trad/package.json
@@ -25,6 +25,9 @@
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "native-file-system-adapter": "^2.0.1",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.10",
     "tslib": "^2.2.0",
@@ -48,6 +51,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "any-text": "^1.2.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
