--- a/scrip-trad/package.json
+++ b/scrip-trad/package.json
@@ -32,6 +32,7 @@
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "docx-tables": "^0.2.0",
+    "file-saver": "^2.0.5",
     "https-browserify": "^1.0.0",
     "native-file-system-adapter": "^2.0.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
@@ -59,6 +60,7 @@
     "@capacitor/cli": "3.3.3",
     "@ionic/angular-toolkit": "^5.0.0",
     "@ionic/lab": "3.2.10",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
