--- a/scrip-trad/package.json
+++ b/scrip-trad/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@codetrix-studio/capacitor-google-auth": "^3.1.3",
     "@ionic/angular": "^6.0.0",
     "assert": "^2.0.0",
     "awesome-unoconv": "^1.0.1",
